# lang-agent

./: .gitignore  LICENSE  README.en.md  README.md
examples/: advance.json  command_demo.json  commenter.json  doc_demo.json  doc_loader_demo.json  executor_demo.json  loop_chat.json  loop_demo.json  poet1.json  poet2.json  react_agent_demo.json  supervisor_demo.json  transform_demo.json  vector_ingest_demo.json  vector_retriever_demo.json  (+2 more)
lang-agent-backend/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
lang-agent-backend/lang_agent/: main.py
lang-agent-backend/lang_agent/api/: __init__.py  router.py
lang-agent-backend/lang_agent/api/v1/: __init__.py  agent.py  document.py  file.py  mcp.py  model.py  request_params.py  response_models.py  vectorstore.py
lang-agent-backend/lang_agent/data_schema/: request_params.py  response_models.py
lang-agent-backend/lang_agent/db/: database.py  models.py
lang-agent-backend/lang_agent/edge/: __init__.py  condition_edge.py  util.py
lang-agent-backend/lang_agent/graph/: __init__.py  callback.py  engine.py
lang-agent-backend/lang_agent/logger/: main.py
lang-agent-backend/lang_agent/node/: __init__.py  node_factory.py
lang-agent-backend/lang_agent/node/agent/: __init__.py  base_agent.py  react_agent_node.py  reuse_agent_node.py  supervisor_agent_node.py
lang-agent-backend/lang_agent/node/core/: __init__.py  base.py  end_node.py  input_node.py  llm_node.py  start_node.py  vlm_node.py
lang-agent-backend/lang_agent/node/custom/: doc_download.py  doc_extract.py  doc_summary.py  doc_summary_bak.py  excel_loader.py
lang-agent-backend/lang_agent/node/extend/: command_node.py  counter_node.py  doc_download.py  doc_loader_node.py  doc_save_node.py  executor_node.py  img_loader_node.py  transform_node.py  vector_ingest_node.py  vector_retriever_node.py  vector_store_provider.py
lang-agent-backend/lang_agent/setting/: __init__.py  checkpointer.py  manager.py
lang-agent-backend/lang_agent/util/: __init__.py  alchemy.py  convert.py  document.py  util.py
lang-agent-backend/tests/unit_tests/: test_database.py  test_util.py
(+77 files in other folders)
